Fix bug where wrapping the logo in an <a> tag would brake it

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -116,10 +116,6 @@ html, body {
     }
   }
 
-  .logo {
-    margin-bottom: $logo-margin;
-  }
-
   .search-results {
     margin-top: 0;
     box-sizing: border-box;
